# smartsafetyai

./: .gitignore  app.py  chatbot.py  check_embeddings.py  doc_mapping.npy  doc_processor.py  embed_documents.py  incident_filters.py  incident_graphs.py  incident_matcher.py  llm_handler.py  main.py  preprocess_incidents.py  pyproject.toml  requirements.txt  risk_analysis.py  risk_analyzer.py  risk_assessor.py  routes.py  script.py  search_engine.py  vector_store.py
data/: sample_protocols.py
data/pdfs/: Incident_report_modified_without regulatory clause_200 cases.docx  emergency_guidebook.json
data/processed/: incident_reports.csv  incident_reports.json
data/vector_store/: document_metadata.json  document_vectors.npy  tfidf_vectorizer.pkl
instance/: safety_system.db
processed_docs/: DOT (Department of Transportation) - transportation of Liquids -  49 CFR Part 195 (up to date as of 2-26-2025).pdf.txt  DOT (Department of Transportation) - transportation of natural gas and other gas - 49 CFR Part 192 (up to date as of 2-26-2025).pdf.txt  Incident_report_modified_without regulatory clause_200 cases.docx.txt  PHMSA Emergency Response Guidebook 2024.pdf.txt
static/css/: custom.css
static/data/: emergency_guidebook.json  incident_reports.json
static/js/: chat.js  risk_visualizer.js  search.js
templates/: 404.html  500.html  chat.html  index.html  layout.html  risk_assessment.html  search.html
